prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/invalid_type_hint_2.diag.txt
ERROR: expected 'TYPE_NAME'
testData/diagnostics/invalid_type_hint_2.nut:1:16

function fn(...:) {}
                ^


